// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test for atom - Badge render Badge with className and value 1`] = `
<div>
  <span
    class="testingClassName css-1i1ahpj"
  >
    test
  </span>
</div>
`;

exports[`test for atom - Badge render Badge with value 1`] = `
<div>
  <span
    class="css-1i1ahpj"
  >
    this is a super weird test
  </span>
</div>
`;

exports[`test for atom - Badge render Badge without props must be same 1`] = `
<div>
  <span
    class="css-1i1ahpj"
  />
</div>
`;
